# gdbstub-nx

./: CMakeLists.txt  README.md
cmake/: gdbstub.pc.in
driver/: CDC-ACM.inf
src/: exception.s  gdbstub.cpp  gdbstub.h
src/logger/: Logger.cpp  Logger.h
src/nxlink/: nxlink.cpp  nxlink.h
src/usb/: USBInterface.h  USBSerial.cpp  USBSerial.h  USBSerialComInterface.cpp  USBSerialComInterface.h  USBSerialDataInterface.cpp  USBSerialDataInterface.h  usb.c  usb.h
